--- a/MEME-MAKER/index.html
+++ b/MEME-MAKER/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <canvas></canvas>
+  <input type="color" id="color">
   <input type="range" id="line-width" min="1" max="10" value="5">
   <script src="app.js"></script>
 </body>
