--- a/MEME-MAKER/index.html
+++ b/MEME-MAKER/index.html
@@ -31,6 +31,7 @@
   <button id="eraser-btn">Eraser</button>
   <input type="file" accept="image/*" id="file">
   <input type="text" placeholder="Write and then double click" id="text">
+  <button id="save">Save image</button>
   <script src="app.js"></script>
 </body>
 
